--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "on-change": "^2.1.1",
+    "popper.js": "^1.16.1",
+    "yup": "^0.29.3"
   }
 }
