--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "i18next": "^19.6.3",
     "jquery": "^3.5.1",
     "on-change": "^2.1.1",
     "popper.js": "^1.16.1",
