--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bootstrap": "^4.5.0",
     "i18next": "^19.6.3",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "on-change": "^2.1.1",
     "popper.js": "^1.16.1",
     "yup": "^0.29.3"
